--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "effector": "^22.8.6",
     "effector-react": "^22.5.3",
     "effector-storage": "^6.1.1",
+    "emoji-picker-react": "^4.4.12",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
